--- a/package.json
+++ b/package.json
@@ -27,4 +27,12 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
+  {
+  "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/supabase-js": "^2.39.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
+}
 }
